fixed alignement issues

--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,11 @@ button:hover {
   color: white;
   cursor: pointer;
 }
+
+
+.container > * {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
