--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -1,11 +1,13 @@
-/* GameBoard.css */
 
-.gameboard {
+  .gameboard {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
-  }
+    display: flex;          
+    flex-direction: column; 
+    align-items: center;    
+}
   
   .back-button {
     padding: 0.6rem 1.2rem;
@@ -25,14 +27,14 @@
     background-color: #5a4ed0;
   }
   
+  
   .grid {
     display: grid;
     gap: 1rem;
+    justify-content: center; 
     margin: 0 auto;
-    justify-items: center;
-    align-items: center;
-    width: 100%;
-  }
+    grid-auto-flow: row;     
+}
   
   
   .victory {
